--- a/src/components/app/_variables.scss
+++ b/src/components/app/_variables.scss
@@ -153,17 +153,17 @@ $padding-content-bottom: 15rem;
 
 // Shadow Depths
 
-$shadow-depth-0:                  none !default;
-$shadow-depth-1:                  0 1px 0 $gray-400 !default;
-$shadow-depth-2:                  0 1px 1px rgba(0,0,0,0.1) !default;
-$shadow-depth-3:                  0 1px 2px rgba(0,0,0,0.1) !default;
-$shadow-depth-4:                  0 2px 8px rgba(0,0,0,0.1) !default;
-$shadow-depth-5:                  0 4px 12px rgba(0,0,0,0.2) !default;
-$shadow-depth-6:                  0 8px 24px -4px rgba(0,0,0,0.2) !default;
-$shadow-depth-7:                  $shadow-depth-2, 0 16px 16px -8px rgba(0,0,0,0.2) !default;
-$shadow-depth-8:                  $shadow-depth-2, 0 24px 24px -4px rgba(0,0,0,0.2) !default;
+$shadow-depth0:                  none !default;
+$shadow-depth1:                  0 1px 0 $gray-400 !default;
+$shadow-depth2:                  0 1px 1px rgba(0,0,0,0.15) !default;
+$shadow-depth3:                  0 1px 2px rgba(0,0,0,0.1) !default;
+$shadow-depth4:                  0 2px 8px rgba(0,0,0,0.1) !default;
+$shadow-depth5:                  0 4px 12px rgba(0,0,0,0.2) !default;
+$shadow-depth6:                  0 8px 24px -4px rgba(0,0,0,0.2) !default;
+$shadow-depth7:                  0 1px 2px rgba(0,0,0,0.2), 0 16px 16px -8px rgba(0,0,0,0.2) !default;
+$shadow-depth8:                  0 1px 2px rgba(0,0,0,0.2), 0 24px 24px -4px rgba(0,0,0,0.2) !default;
 
-$shadow-card:                    $shadow-depth-2 !default;
+$shadow-card:                    $shadow-depth2 !default;
 
 
 // Checkbox Radio Switch Heights
