--- a/src/components/icon/styles.scss
+++ b/src/components/icon/styles.scss
@@ -209,14 +209,9 @@
 .icon-radius-rounded {
   border-radius: .25rem;
 
-  &.icon-alert-md {
+  &.icon-alert,
+  &.icon-alert-sm {
     border-radius: .5rem;
-  }
-  &.icon-alert-lg {
-    border-radius: .675rem;
-  }
-  &.icon-alert-xl {
-    border-radius: .75rem;
   }
 }
 
@@ -235,12 +230,6 @@
   box-shadow: inset 0 0 0 3px $body-color;
 
   &.icon-alert-xxs {
-    box-shadow: inset 0 0 0 2px $body-color;
-  }
-  &.icon-alert-xs {
-    box-shadow: inset 0 0 0 2px $body-color;
-  }
-  &.icon-alert-sm {
     box-shadow: inset 0 0 0 2px $body-color;
   }
   &.icon-alert-lg {
@@ -269,9 +258,7 @@
       color: $value;
       box-shadow: inset 0 0 0 3px $value;
 
-      &.icon-alert-xxs,
-      &.icon-alert-xs,
-      &.icon-alert-sm {
+      &.icon-alert-xxs {
         box-shadow: inset 0 0 0 2px $value;
       }
       &.icon-alert-lg {
@@ -303,24 +290,17 @@
 
 // toggle icons in buttons using active state of button
 
-.icon-toggle:first-child {
-  opacity: 0.4;
-
-  .btn.active &,
-  .btn:active & {
-    display: none;
-  }
-}
-
 .icon-toggle:last-child {
   display: none;
+}
 
-  .btn:active & {
-    display: inline-flex;
-    opacity: 0.4;
+.btn:active,
+.btn.active {
+
+  & .icon-toggle:first-child {
+    display: none;
   }
-  .btn.active & {
+  & .icon-toggle:last-child {
     display: inline-flex;
-    opacity: 1;
   }
 }
