--- a/src/components/media/styles.scss
+++ b/src/components/media/styles.scss
@@ -52,7 +52,7 @@
     content: '';
     transition: opacity $transition;
     opacity: 0;
-    box-shadow: $shadow-depth-6;
+    box-shadow: $shadow-depth6;
   }
 
   &:hover {
